test_suite/tests/ui/transparent/with_to_string.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(transparent, to_string)]
struct S {
    a: u8,
}

fn main() {}
